--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,25 @@
 	"require": {
 		"composer/installers": "~1.0"
 	},
+	"autoload": {
+		"psr-4": {
+			"BlueSpice\\ExportTables\\": "src"
+		}
+	},
+	"require-dev": {
+		"jakub-onderka/php-parallel-lint": "1.0.0",
+		"jakub-onderka/php-console-highlighter": "0.3.2",
+		"mediawiki/minus-x": "0.3.1"
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor --exclude node_modules",
+			"minus-x check ."
+		],
+		"fix": [
+			"minus-x fix ."
+		]
+	},
 	"extra": {
 		"installer-name": "BlueSpiceExportTables"
 	}
