Allow required composer plugins
composer/installers

ERM30996

[REL1_35, REL1_35-4.2.x, REL1_39, master]

Change-Id: I22d309b92a9acfa89e486cf2f14ae4aaf2b1cbd5

--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
 	},
 	"extra": {
 		"installer-name": "BlueSpiceExportTables"
+	},
+	"config": {
+		"allow-plugins": {
+			"composer/installers": true
+		}
 	}
 }
