--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,22 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client-es6",
+		"wikimedia/jquery",
 		"wikimedia/mediawiki"
-	]
+	],
+	"globals": {
+		"bs": "readonly",
+		"mediaWiki": "readonly",
+		"ve": "readonly"
+	},
+	"rules": {
+		"es-x/no-async-functions": "off",
+		"max-len": "off",
+		"no-jquery/no-global-selector": "off",
+		"no-prototype-builtins": "off"
+	},
+	"parserOptions": {
+		"ecmaVersion": 8
+	}
 }
