Declare RL module budgets
ERM41599

[REL1_43, REL1_43-5.0.x, master]

Change-Id: I38101c1d614d2042dec0fb6f6f49a1be5ff41a0e

--- a/bundlesize.config.json
+++ b/bundlesize.config.json
@@ -2,5 +2,9 @@
 	{
 		"resourceModule": "ext.bluespice.exportTables.contentTables.styles",
 		"maxSize": "2.2 kB"
+	},
+	{
+		"resourceModule": "ext.bluespice.exportTables.main",
+		"maxSize": "2.1 kB"
 	}
 ]
